# rag-mcp

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MCP_연동가이드.md  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.json
docs/superpowers/plans/: 2026-07-13-rag-mcp-safety-hardening.md
docs/superpowers/specs/: 2026-07-13-rag-mcp-safety-hardening-design.md
eval/: goldset.example.jsonl
src/rag_mcp/: chunking.py  cli.py  config.py  doctor.py  embeddings.py  evaluation.py  indexer.py  jobs.py  manifest.py  metadata.py  models.py  ocr.py  ocr_triage.py  page_render.py  pdf_parser.py  pipeline.py  request_models.py  retrieval.py  server.py  service.py  sparse.py  table_chunking.py  tokenizer.py  vector_store.py
tests/: conftest.py  test_chunking.py  test_config_models.py  test_doctor.py  test_embeddings.py  test_evaluation.py  test_jobs.py  test_manifest.py  test_mcp_tools.py  test_metadata.py  test_ocr.py  test_ocr_triage.py  test_page_render.py  test_pdf_parser.py  test_pipeline.py  test_retrieval.py  test_smoke_qdrant.py  test_text_norm.py  test_tokenizer.py  test_vector_store.py
