[project]
name = "rag-mcp"
version = "0.1.0"
description = "회계·예산 지침서 RAG MCP 서버 (로컬 색인, Qdrant dense+sparse 하이브리드)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mcp>=1.2.0",
    "anyio>=4.0.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "kiwipiepy>=0.18.0",
    "langchain-text-splitters>=0.3.0",
    "pydantic>=2.0.0",
    "opendataloader-pdf>=0.1.0",
    "pymupdf>=1.24.0",
    "truststore>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
rag-mcp = "rag_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
